Fix newsletter items spacing issue

--- a/assets/stylus/email.styl
+++ b/assets/stylus/email.styl
@@ -17,9 +17,6 @@ main
 .topic 
   color: primary-color
 
-.article 
-  margin-bottom: 1rem
-
 .title a 
   color: text-color
   line-height: 1.5rem
